fix churn notebook typos

--- a/dqn-churnSim.ipynb
+++ b/dqn-churnSim.ipynb
@@ -86,7 +86,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,12 +100,12 @@
     "    _S4_: price_mention (Price Issues Discussed)\n",
     "\n",
     "\n",
-    "We consider 5 **actions** for all customers:\n",
+    "We consider 4 **actions** for all customers:\n",
     "\n",
     "    a = 0: do nothing\n",
-    "    a = 1: if price_metnion>0, then reduce the price 10 %. This will lead to 20% reduction in churn\n",
-    "    a = 2: if price_metnion>0, then reduce the price 20 %. This will lead to 40% reduction in churn\n",
-    "    a = 3: if price_metnion>0, then reduce the price 30 %. This will lead to 50% reduction in churn\n",
+    "    a = 1: if price_mention>0, then reduce the price 10 %. This will lead to 20% reduction in churn\n",
+    "    a = 2: if price_mention>0, then reduce the price 20 %. This will lead to 40% reduction in churn\n",
+    "    a = 3: if price_mention>0, then reduce the price 30 %. This will lead to 50% reduction in churn\n",
     "\n"
    ]
   },
